feat(i18n): translate ScriptManagerDialog

--- a/krillnotes-desktop/src/i18n/locales/en.json
+++ b/krillnotes-desktop/src/i18n/locales/en.json
@@ -79,6 +79,7 @@
     "failedToggle": "Failed to toggle script: {{error}}",
     "failedDelete": "Failed to delete: {{error}}",
     "failedImport": "Failed to read file: {{error}}",
+    "failedReorder": "Failed to reorder scripts: {{error}}",
     "reloadErrors": "Script reload errors:\n{{errors}}"
   },
   "workspace": {
