fix: align German operationsLog menu label with log window title

--- a/krillnotes-desktop/src/i18n/locales/de.json
+++ b/krillnotes-desktop/src/i18n/locales/de.json
@@ -266,7 +266,7 @@
     "workspaceProperties": "Arbeitsbereich-Eigenschaften…",
     "settings": "Einstellungen…",
     "manageScripts": "Skripte verwalten…",
-    "operationsLog": "Betriebsprotokoll…",
+    "operationsLog": "Vorgangsprotokoll…",
     "refresh": "Aktualisieren",
     "aboutKrillnotes": "Über Krillnotes"
   }
